# ice-foia-normalizer

./: .gitignore  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deportation_foia_normalizer/: __main__.py  cli.py  codes.py  default_schema.yaml  normalize.py  readers.py  report.py  schema_config.py  writers.py
examples/: sample.csv  sample.normalized.csv  sample.rejects.csv
ice_foia_normalizer/: __main__.py  cli.py  codes.py  dates.py  normalize.py  record.py  report.py  schema_config.py  writers.py
tests/: test_cli.py  test_codes.py  test_dates.py  test_e2e_default.py  test_e2e_exit2.py  test_e2e_strict.py  test_e2e_version_help.py  test_integration_csv.py  test_integration_json.py  test_integration_paths.py  test_integration_sqlite.py  test_normalize.py  test_package.py  test_readers.py  test_report.py  test_schema_config.py  test_writers.py
